# blazingly-fast-api

./: Cargo.toml  Dockerfile
src/: main.rs
src/services/: echo.rs  mod.rs
src/utils/: env_utils.rs  mod.rs
