[package]
name = "jkinsight-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0", features = ["full"] }
tokio = { version = "1.34.0", features = ["full"] }
bytes = { version = "1.5.0" }
http = { version = "1.0.0" }
http-body-util = { version = "0.1.0" }
pretty_env_logger = { version = "0.5.0" }
futures-util = { version = "0.3.29", default-features = false }
pin-project-lite = { version = "0.2.13" }